--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/attendance.jpg" class="d-block w-100" alt="attendance">
-            <div class="carousel-caption d-none d-md-block">
-              <h4>Mark Attendance</h4>
+            <img src="./images/amityuniversity1.jpg" class="d-block w-100" alt="amity">
+            <div class="carousel-caption d-none d-md-block" style="color: #000000; font-weight: bolder;">
+              <h3>Mark Attendance</h3>
               <p>Mark The Attendance with Ease. Delete and Update it any Time</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/day.jpeg" class="d-block w-100" alt="day">
-            <div class="carousel-caption d-none d-md-block">
-                <h4>Mark Attendance</h4>
+            <img src="./images/amityuniversity2.jpg" class="d-block w-100" alt="hostel">
+            <div class="carousel-caption d-none d-md-block" style="color: #000000; font-weight: bolder;">
+                <h3>Mark Attendance</h3>
                 <p>Mark The Attendance with Ease. Delete and Update it any Time</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/night.png" class="d-block w-100" alt="night">
-            <div class="carousel-caption d-none d-md-block">
-                <h4>Mark Attendance</h4>
+            <img src="./images/amityuniversity3.jpg" class="d-block w-100" alt="auditorium">
+            <div class="carousel-caption d-none d-md-block" style="color: #000000; font-weight: bolder; ">
+                <h3>Mark Attendance</h3>
                 <p>Mark The Attendance with Ease. Delete and Update it any Time</p>
             </div>
           </div>
@@ -96,7 +96,7 @@
 
     <br/><br/>
     <div class="head-add-student">
-        <h2 class="heading">&nbsp;Attendance Management&nbsp;</h2>
+        <h1 class="heading">&nbsp;Attendance Management&nbsp;</h1>
         <div class="add__student__btn__modale__only" >
             <button class="btn btn-warning float-right" data-bs-toggle="modal" data-bs-target="#addNewModal">
                 <i class="fa fa-thin fa-user-plus">&nbsp;Add Student</i>
@@ -147,13 +147,13 @@
     <div class="students-list-container">
         <table class="table table-hover table-responsive table-bordered" style="border: 1px solid black;">
             <thead>
-                <h5 style="margin-top:50px; margin-bottom: 10px;">List of all the Students...</h5>
+                <h5 style="margin-top:50px; margin-bottom: 20px; font-size: 40px; font-weight: 70;">List of all the Students...</h5>
                 <tr>
-                    <th style="text-align:center; background-color:#07929e;"><b>profile Picture</b></th>
-                    <th style="text-align:center; background-color:#07929e;"><b>Name</b></th>
-                    <th style="text-align:center; background-color:#07929e;"><b>Attendance</b></th>
-                    <th style="text-align:center; background-color:#07929e;"><b>Subject</b></th>
-                    <th style="text-align:center; background-color:#07929e;"><b>Options</b></th>
+                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>profile Picture</b></th>
+                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Name</b></th>
+                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Attendance</b></th>
+                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Subject</b></th>
+                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Options</b></th>
                 </tr>
             </thead>
             <tbody id="students_details">
@@ -165,32 +165,31 @@
     <br><br>
     <div class="std-summary" id="students_summary">
         <!-- students summary -->
-        <h6 style="color: rgb(148, 87, 204);">Total number of students: <span id="Total-std">0</span></h6>
-        <h6 style="color: rgb(53, 202, 53);">Present students: <span id="Present-std">0</span></h6>
-        <h6 style="color: rgb(221, 75, 30);">Absent students: <span id="Absent-std">0</span></h6>
+        <h6 style="color: rgb(148, 87, 204); font-size: 30px; font-weight: 50;">Total number of students: <span id="Total-std">0</span></h6>
+        <h6 style="color: rgb(53, 202, 53); font-size: 30px; font-weight: 50;">Present students: <span id="Present-std">0</span></h6>
+        <h6 style="color: rgb(221, 75, 30); font-size: 30px; font-weight: 50;">Absent students: <span id="Absent-std">0</span></h6>
     </div>
-
-    <br><br>
-    <div id="aboutUs">
-        <h1><b>Attendance Marker</b></h1>
+    <br>
+    <br>
+    <div id="aboutUs" >
+        <h1><b><u>About Us</u></b></h1>
+        <br>
+        <h2><b>Attendance Marker</b></h2>
         <div>
             <h3>
                 In this you can Add the Student , Delete The Student and also Update or Edit the Attendance and Details Because,
             </h3>
-            <div>
-                <img src="./images/AM.png" alt="oip" style="width: 400px;">
-            </div> 
-        </div>
-          
+            <img src="./images/AM.png" alt="oip" style="width: 400px;">
+        </div>  
     </div>
 
     <br><br>
-    <div id="contactUs">
-        <h1><b>Connect with us</b></h1>
+    <div id="contactUs" >
+        <h1><b><u>Connect with us</u></b></h1>
         <div>
             <div>
                 <img src="./images/logo.jfif" style="margin: 20px; width: 100px; height: 100px;" />
-                <a target="_blank" href="https://github.com/pranjali570/attendance" style="text-decoration:none; font-size: 2.5rem; color: rgb(255, 255, 255);"> Attendance Marker</a>
+                <a target="_blank" href="https://github.com/pranjali570/attendance" style="text-decoration:none; font-size: 2.5rem; color: #2b323a;"> Attendance Marker</a>
             </div>
             <div>
             <a href="https://www.linkedin.com/in/pranjali-agrawal-b25b061a9/">
