--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             <thead>
                 <h5 style="margin-top:50px; margin-bottom: 20px; font-size: 40px; font-weight: 70;">List of all the Students...</h5>
                 <tr>
-                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>profile Picture</b></th>
-                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Name</b></th>
-                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Attendance</b></th>
-                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Subject</b></th>
-                    <th style="text-align:center; background-color:#07929e; font-size: 30px; font-weight: 50;"><b>Options</b></th>
+                    <th style="text-align:center; background-image:linear-gradient(to top, #07929e, #c4dee0); font-size: 30px; font-weight: 50;"><b>profile Picture</b></th>
+                    <th style="text-align:center; background-image:linear-gradient(to top, #07929e, #c4dee0); font-size: 30px; font-weight: 50;"><b>Name</b></th>
+                    <th style="text-align:center; background-image:linear-gradient(to top, #07929e, #c4dee0); font-size: 30px; font-weight: 50;"><b>Attendance</b></th>
+                    <th style="text-align:center; background-image:linear-gradient(to top, #07929e, #c4dee0); font-size: 30px; font-weight: 50;"><b>Subject</b></th>
+                    <th style="text-align:center; background-image:linear-gradient(to top, #07929e, #c4dee0); font-size: 30px; font-weight: 50;"><b>Options</b></th>
                 </tr>
             </thead>
             <tbody id="students_details">
